; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wan/extr_z85230.c_z8530_describe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wan/extr_z85230.c_z8530_describe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.z8530_dev = type { i64, i32, i32 }

@.str = private unnamed_addr constant [34 x i8] c"%s: %s found at %s 0x%lX, IRQ %d\0A\00", align 1
@z8530_type_name = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @z8530_describe(%struct.z8530_dev* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.z8530_dev*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.z8530_dev* %0, %struct.z8530_dev** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.z8530_dev*, %struct.z8530_dev** %4, align 8
  %8 = getelementptr inbounds %struct.z8530_dev, %struct.z8530_dev* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** @z8530_type_name, align 8
  %11 = load %struct.z8530_dev*, %struct.z8530_dev** %4, align 8
  %12 = getelementptr inbounds %struct.z8530_dev, %struct.z8530_dev* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds i32, i32* %10, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @Z8530_PORT_OF(i64 %17)
  %19 = load %struct.z8530_dev*, %struct.z8530_dev** %4, align 8
  %20 = getelementptr inbounds %struct.z8530_dev, %struct.z8530_dev* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @pr_info(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %15, i8* %16, i32 %18, i32 %21)
  ret void
}

declare dso_local i32 @pr_info(i8*, i32, i32, i8*, i32, i32) #1

declare dso_local i32 @Z8530_PORT_OF(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
